Migré le code MS SQL vers SQLite. Modifié les requetes de tests.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "mssql": "^11.0.1",
-    "node": "^18.20.8"
+    "node": "^18.20.8",
+    "sqlite3": "^5.1.7"
   }
 }
