--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "mssql": "^11.0.1",
