--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex": "^3.1.0",
     "mssql": "^11.0.1",
     "node": "^18.20.8",
+    "pdfkit": "^0.17.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
